--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -33,7 +33,7 @@
                                 {{if .Title }}
                                     {{if .Content}}
                                         <li>
-                                            <a href="#{{ (.Title | md5) }}">{{ .Title }}</a>
+                                            <a href="#{{ cond (in (.Title|urlize) "%") (.Title | md5) (.Title | urlize) }}">{{ .Title }}</a>
                                         </li>
                                     {{ else }}
                                         <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
@@ -52,7 +52,7 @@
                     {{ range .Pages }}
                         {{if .Title }}
                             {{if .Content }}
-                                <article id="{{ (.Title | md5) }}">
+                                <article id="{{ cond (in (.Title|urlize) "%") (.Title | md5) (.Title | urlize) }}">
                                     <h2 class="major">{{ .Title }}</h2>
                                     <span class="image main"><img src="{{ .Params.image }}" alt="" /></span>
                                     {{ .Content }}
