使翻页居中对齐

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1691,7 +1691,7 @@ input, select, textarea {
 .paginator-child {
 	display: block;
 	width: 10rem;
-	margin: center;
+	margin: auto;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
